tests/ui/consts/const_in_pattern/no-eq-branch-fail.stderr
error: to use a constant of type `Foo` in a pattern, `Foo` must be annotated with `#[derive(PartialEq, Eq)]`
  --> $DIR/no-eq-branch-fail.rs:21:9
   |
LL |         BAR_BAZ => panic!(),
   |         ^^^^^^^
   |
   = note: the traits must be derived, manual `impl`s are not sufficient
   = note: see https://doc.rust-lang.org/stable/std/marker/trait.StructuralEq.html for details

error: aborting due to previous error

